include fallback page for unconnected users

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -10,3 +10,6 @@ $darker-charcoal: #333333;
 $lg-breakpoint: 1200px;
 $md-breakpoint: 800px;
 $sm-breakpoint: 650px;
+
+// define the padding
+$desktop-padding-x: 50px;
