--- a/components/unconnected/unconnected.module.scss
+++ b/components/unconnected/unconnected.module.scss
@@ -1,6 +1,7 @@
 @import "styles/variables.scss";
 
 .unconnected{
+    margin: auto;
     & > div{
         margin: 0 auto;
         margin-top: 50px;
