--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -3,6 +3,7 @@
 .header{
     display: flex;
     justify-content: space-between;
+    padding-left: 40px;
     padding: 30px $desktop-padding-x;
 
     & > span{
