--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,25 @@
 @import "./variables.scss";
 @import 'antd/dist/antd.css'; // or 'antd/dist/antd.less'
+@import 'react-toastify/dist/ReactToastify.css';
 
 
 html{
   font-size: 16px;
+}
+
+.ant-spin-text{
+  margin-top: 40px;
+  font-size: 24px;
+}
+
+.ant-spin-spinning{
+  margin-top: 50px;
+}
+
+ul.ant-menu{
+  height: calc(100vh - 150px);
+}
+
+h4.ant-typography{
+  margin-bottom: 0 !important;
 }
