feature: implement logic to create safe

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,9 @@
 html{
   font-size: 16px;
 }
-
+.ant-spin-nested-loading{
+  width: 100%;
+}
 .ant-spin-text{
   margin-top: 40px;
   font-size: 24px;
