--- a/__pages__/home/components/safeinformation/saleinformation.module.scss
+++ b/__pages__/home/components/safeinformation/saleinformation.module.scss
@@ -1,6 +1,6 @@
 .safeinformation{
     padding: 20px 50px;
-    width: calc(100vw - 300px); //fullwidth but account for the side nav
+    width: calc(100vw - 500px); //fullwidth but account for the side nav
 
     & > section{
         display: flex;
@@ -11,5 +11,11 @@
             display: flex;
             gap: 20px;
         }
+    }
+
+    .balances{
+        display: flex;
+        align-items: flex-end;
+        gap: 20px;
     }
 }
