chore:refactor code

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,3 +28,7 @@ h4.ant-typography{
 .ant-modal-footer{
   display: none !important;
 }
+
+.ant-list .ant-list-item .ant-list-item-meta {
+  align-items: center !important;
+}
