--- a/__pages__/home/components/queue/queue.module.scss
+++ b/__pages__/home/components/queue/queue.module.scss
@@ -4,7 +4,8 @@
     margin-top: 20px;
 
     div{
-        padding: 15px 20px;
+        position: relative;
+        padding: 20px 20px;
         margin-top: 30px;
         border: 1px solid rgba(5, 5, 5, 0.06);
         cursor: pointer;
@@ -13,6 +14,18 @@
             margin: 0 3px;
             text-transform: capitalize;
             font-weight: bold;
+        }
+
+        b{
+            display: inline-block;
+            position: absolute;
+            top: 37px;
+            right: 10px;
+            top: 6px;
+            span{
+                text-transform: lowercase;
+                font-size: 9px !important;
+            }
         }
     }
 }
